trying to stop zooming when keybaord displays on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ a, a:active, a:link {
 	color: #787878;
 }
 
+/* placeholder text styles */
 ::-webkit-input-placeholder, .form-control::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: #5a5a5a;
 }
@@ -19,6 +20,11 @@ a, a:active, a:link {
 }
 :-moz-placeholder, .form-control:-moz-input-placeholder { /* Firefox 18- */
   color: #5a5a5a;
+}
+
+/* stop zooming when keyboard displays on iphone */
+.ui-select .ui-btn select{
+	font-size: 50px;
 }
 
 /* eliminates the gutters in bootstrap */
